--- a/subtopic2.html
+++ b/subtopic2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>AI in Healthcare — Webography</title>
+  <title>AI in Education — Webography</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     body { font-family: Arial, Helvetica, sans-serif; margin: 28px; color:#222; }
@@ -17,24 +17,24 @@
 </head>
 <body>
   <p class="back"><a href="project.html">&larr; Back to project page</a></p>
-  <h1>AI in Healthcare</h1>
-  <p>Two authoritative and informative sources chosen for this subtopic.</p>
+  <h1>AI in Education</h1>
+  <p>Two highly relevant scholarly resources for AI-driven learning and tutoring.</p>
 
   <!-- Source 1 -->
   <h2>Source 1</h2>
   <table>
     <tr>
       <th>URL</th>
-      <td class="site-url"><a href="https://pubmed.ncbi.nlm.nih.gov/39230911/" target="_blank" rel="noopener">https://pubmed.ncbi.nlm.nih.gov/39230911/</a></td>
+      <td class="site-url"><a href="https://www.sciencedirect.com/science/article/pii/S0957417424010339" target="_blank" rel="noopener">https://www.sciencedirect.com/science/article/pii/S0957417424010339</a></td>
     </tr>
     <tr>
       <th>Site / Author</th>
-      <td>PubMed / Raj M. Ratwani, Karey Sutton, Jessica E. Galarraga (JAMA Viewpoint, 2024)</td>
+      <td>ScienceDirect / S. Wang et al., "Artificial intelligence in education: A systematic literature review" (2024)</td>
     </tr>
     <tr>
       <th>Abstract (100–150 words)</th>
       <td>
-        This JAMA viewpoint examines the problem of algorithmic bias in healthcare AI and highlights practical steps to address it. The authors review how biased training data and deployment choices can produce unequal outcomes for different demographic groups and outline recommendations—such as more representative datasets, transparency measures, and rigorous clinical evaluation—to reduce harm. They emphasize that adoption of AI in hospitals cannot outpace validation: tools must be tested across diverse populations and monitored continuously. The piece is concise but influential because it connects technical sources of bias to real-world clinical risks and policy solutions, making it a useful primer for researchers, clinicians, and administrators working on trustworthy medical AI.
+        This systematic review compiles research on AI applications in education, emphasizing personalized learning, adaptive assessment, and intelligent tutoring. The authors analyze empirical studies to identify where AI has improved learning outcomes and where evidence is still thin. They highlight tools like AI tutors, adaptive curricula, and automated feedback systems, and discuss pedagogical and equity concerns—especially the digital divide and risks of overreliance on automated feedback. The paper’s strength lies in synthesizing a range of experimental and real-world deployments, pointing to both promising directions and gaps (e.g., long-term learning retention and socio-emotional impacts) that future research must address.
       </td>
     </tr>
   </table>
@@ -44,21 +44,21 @@
   <table>
     <tr>
       <th>URL</th>
-      <td class="site-url"><a href="https://jamanetwork.com/journals/jama/fullarticle/2840175" target="_blank" rel="noopener">https://jamanetwork.com/journals/jama/fullarticle/2840175</a></td>
+      <td class="site-url"><a href="https://arxiv.org/abs/2406.10934" target="_blank" rel="noopener">https://arxiv.org/abs/2406.10934</a></td>
     </tr>
     <tr>
       <th>Site / Author</th>
-      <td>JAMA / Derek C. Angus et al., "AI, Health, and Health Care Today and Tomorrow" (2025)</td>
+      <td>arXiv / Zhoumingju Jiang &amp; Mengjun Jiang, "Beyond Answers: LLM-Powered Tutoring System in Physics Education" (2024)</td>
     </tr>
     <tr>
       <th>Abstract (100–150 words)</th>
       <td>
-        This broad JAMA article synthesizes contemporary developments in clinical AI and considers how to move from promise to safe, equitable practice. It surveys current clinical applications—such as diagnostic imaging, triage tools, and predictive analytics—and highlights regulatory, methodological, and ethical hurdles. The authors stress the need for multidisciplinary research designs, stronger real-world validation, and regulatory frameworks that require transparency and post-market surveillance. They also argue for stakeholder engagement (patients, clinicians, data scientists) in research design to ensure utility and fairness. The article is valuable because it frames AI implementation as an ecosystem problem rather than purely a technical one.
+        This research introduces Physics-STAR, a tutoring framework that uses a large language model to provide adaptive, step-by-step guidance for physics learners. The authors report a controlled pilot showing improved comprehension and efficiency compared with generic LLM help and lecture instruction. The system focuses on fostering deep understanding through guided questioning, scaffolded prompts, and reflective tasks rather than merely supplying answers. The paper is notable because it presents an applied LLM system with measured learning gains and discusses design decisions that support conceptual understanding—making it directly relevant for educators exploring LLM-based instructional tools.
       </td>
     </tr>
   </table>
 
-  <p class="note">Note: abstracts above are original summaries written for this webography and are not copied from the source texts.</p>
+  <p class="note">All abstracts are original summaries authored for this webography.</p>
   <p><a href="project.html">&larr; Back to project</a></p>
 </body>
 </html>
