--- a/project.html
+++ b/project.html
@@ -5,29 +5,34 @@
   <title>Webography Project - AI and Its Impact on Everyday Life</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: Arial, Helvetica, sans-serif; margin: 32px; line-height:1.5; color:#222; }
+    body { 
+      font-family: Arial, Helvetica, sans-serif; 
+      margin: 32px; 
+      line-height: 1.5; 
+      color: #ffffff;           /* white text */
+      background-color: #d4af37; /* gold background */
+    }
     header h1 { margin: 0 0 8px 0; }
-    .meta { margin-bottom: 20px; color:#444; }
+    .meta { margin-bottom: 20px; color: #ffffff; }
     nav ul { list-style: disc; margin-left: 1.6em; }
-    a { color: #0b66c3; text-decoration: none; }
+    a { color: #ffffff; text-decoration: none; }  /* white links */
     a:hover { text-decoration: underline; }
     .links { margin-top: 16px; }
-    footer { margin-top: 36px; font-size:0.9em; color:#666; }
+    footer { margin-top: 36px; font-size:0.9em; color:#ffffff; }
   </style>
 </head>
 <body>
   <header>
     <h1>Webography Project: Artificial Intelligence and Its Impact on Everyday Human Life</h1>
-    <p class="meta"><strong>Name:</strong> Ryan Zurich &nbsp;|&nbsp; <strong>Course:</strong> CSIT 100 &nbsp;|&nbsp; <strong>Project:</strong> Webography Project &nbsp;|&nbsp; <strong>Date:</strong> November 23, 2025</p>
+    <p class="meta"><strong>Name:</strong> Ryan Zurich &nbsp;|&nbsp; <strong>Course:</strong> CSIT 100 &nbsp;|&nbsp; <strong>Webography Project &nbsp;|&nbsp;</strong> <strong>Date:</strong> November 21, 2025</p>
   </header>
 
   <section>
-    <h2>Research Title</h2>
-    <p><strong>Artificial Intelligence and Its Impact on Everyday Human Life</strong></p>
+    <h2>Artificial Intelligence: Impact on Daily Human Life</h2>
   </section>
 
   <section>
-    <h2>Subtopics (click to view each)</h2>
+    <h2>Subtopics</h2>
     <ul>
       <li><a href="subtopic1.html">AI in Healthcare</a></li>
       <li><a href="subtopic2.html">AI in Education</a></li>
@@ -38,8 +43,8 @@
   <section class="links">
     <h2>Project Files</h2>
     <ul>
-      <li><a href="paper.doc" download>paper.doc</a> — Full research paper (Microsoft Word)</li>
-      <li><a href="presentation.ppt" download>presentation.ppt</a> — Project presentation (PowerPoint)</li>
+      <li><a href="paper.docx" download>paper.docx</a> — Full research paper</li>
+      <li><a href="presentation.ppt" download>presentation.ppt</a> — Project presentation</li>
     </ul>
   </section>
 
