--- a/subtopic1.html
+++ b/subtopic1.html
@@ -2,23 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>AI in Healthcare — Webography</title>
+  <title>AI in Healthcare</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: Arial, Helvetica, sans-serif; margin: 28px; color:#222; }
+    body { 
+      font-family: Arial, Helvetica, sans-serif; 
+      margin: 28px; 
+      color: #ffffff;               /* white text */
+      background-color: #b30000;    /* red background */
+    }
     h1 { margin-bottom: 4px; }
     .back { margin-bottom: 16px; }
+
     table { border-collapse: collapse; width:100%; margin-bottom: 18px; }
-    th, td { border: 1px solid #cfcfcf; padding: 8px; text-align:left; vertical-align:top; }
-    th { background:#f5f5f5; width:160px; }
+    th, td { 
+      border: 1px solid #ffffff;    /* white borders for visibility */
+      padding: 8px; 
+      text-align:left; 
+      vertical-align:top; 
+      color: #ffffff;
+    }
+    th { 
+      background:#800000;           /* darker red for contrast */
+      width:160px; 
+    }
+
+    a { color: #ffffff; text-decoration: underline; }
     .site-url { word-break: break-all; }
-    .note { font-size:0.95em; color:#555; margin-top:12px; }
+
+    .note { font-size:0.95em; color:#ffffff; margin-top:12px; }
   </style>
 </head>
 <body>
   <p class="back"><a href="project.html">&larr; Back to project page</a></p>
   <h1>AI in Healthcare</h1>
-  <p>Two authoritative and informative sources chosen for this subtopic.</p>
 
   <!-- Source 1 -->
   <h2>Source 1</h2>
@@ -32,9 +49,9 @@
       <td>PubMed / Raj M. Ratwani, Karey Sutton, Jessica E. Galarraga (JAMA Viewpoint, 2024)</td>
     </tr>
     <tr>
-      <th>Abstract (100–150 words)</th>
+      <th>Abstract</th>
       <td>
-        This JAMA viewpoint examines the problem of algorithmic bias in healthcare AI and highlights practical steps to address it. The authors review how biased training data and deployment choices can produce unequal outcomes for different demographic groups and outline recommendations—such as more representative datasets, transparency measures, and rigorous clinical evaluation—to reduce harm. They emphasize that adoption of AI in hospitals cannot outpace validation: tools must be tested across diverse populations and monitored continuously. The piece is concise but influential because it connects technical sources of bias to real-world clinical risks and policy solutions, making it a useful primer for researchers, clinicians, and administrators working on trustworthy medical AI.
+        This viewpoint examines bias in healthcare AI algorithms and outlines steps to address it. Ratwani goes in-depth and explains how deployment choices have the potential to produce outcomes that are unequal for different demographic groups. On top of this, he outlines recommendations, most notably greater representation in datasets, transparency measures, and thorough clinical evaluations to reduce potential harm from AI. Artificial Intelligence's adoption in hospitals should never, under any circumstances, outpace validation: tools must be tested across diverse populations and continuously monitored. This piece is influential because of its biases regarding clinical risks in the real world, making it a valuable primer for many researchers and administrators of trustworthy medical AI.
       </td>
     </tr>
   </table>
@@ -51,14 +68,13 @@
       <td>JAMA / Derek C. Angus et al., "AI, Health, and Health Care Today and Tomorrow" (2025)</td>
     </tr>
     <tr>
-      <th>Abstract (100–150 words)</th>
+      <th>Abstract</th>
       <td>
-        This broad JAMA article synthesizes contemporary developments in clinical AI and considers how to move from promise to safe, equitable practice. It surveys current clinical applications—such as diagnostic imaging, triage tools, and predictive analytics—and highlights regulatory, methodological, and ethical hurdles. The authors stress the need for multidisciplinary research designs, stronger real-world validation, and regulatory frameworks that require transparency and post-market surveillance. They also argue for stakeholder engagement (patients, clinicians, data scientists) in research design to ensure utility and fairness. The article is valuable because it frames AI implementation as an ecosystem problem rather than purely a technical one.
+        This article synthesizes developments in clinical AI and considers how to move from potentially safe to entirely safe clinical practices. Within this article, the authors survey current clinical applications. A need is stressed for multidisciplinary research designs, stronger real-world validation, and regulatory frameworks that require complete transparency. An argument is made for stakeholder engagement (data scientists, clinicians, patients) in research design to ensure utility and fairness. Great insight can be found within this article because it implies that AI implementation is much more of a societal issue than purely a technical one.
       </td>
     </tr>
   </table>
 
-  <p class="note">Note: abstracts above are original summaries written for this webography and are not copied from the source texts.</p>
   <p><a href="project.html">&larr; Back to project</a></p>
 </body>
 </html>
