--- a/subtopic2.html
+++ b/subtopic2.html
@@ -5,22 +5,48 @@
   <title>AI in Education — Webography</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: Arial, Helvetica, sans-serif; margin: 28px; color:#222; }
+    body { 
+      font-family: Arial, Helvetica, sans-serif; 
+      margin: 28px; 
+      color: #ffffff;                 
+      background-color: #0b6623;      
+    }
     h1 { margin-bottom: 4px; }
     .back { margin-bottom: 16px; }
-    table { border-collapse: collapse; width:100%; margin-bottom: 18px; }
-    th, td { border: 1px solid #cfcfcf; padding: 8px; text-align:left; vertical-align:top; }
-    th { background:#f5f5f5; width:160px; }
+
+    table { 
+      border-collapse: collapse; 
+      width:100%; 
+      margin-bottom: 18px; 
+    }
+    th, td { 
+      border: 1px solid #ffffff;      
+      padding: 8px; 
+      text-align:left; 
+      vertical-align:top;
+      color: #ffffff;
+    }
+    th { 
+      background:#084d1a;             
+      width:160px; 
+    }
+
+    a { color:#ffffff; text-decoration: underline; }
+
     .site-url { word-break: break-all; }
-    .note { font-size:0.95em; color:#555; margin-top:12px; }
+
+    .note { 
+      font-size:0.95em; 
+      color:#ffffff; 
+      margin-top:12px; 
+    }
   </style>
 </head>
 <body>
   <p class="back"><a href="project.html">&larr; Back to project page</a></p>
   <h1>AI in Education</h1>
-  <p>Two highly relevant scholarly resources for AI-driven learning and tutoring.</p>
 
-  <!-- Source 1 -->
+
   <h2>Source 1</h2>
   <table>
     <tr>
@@ -32,14 +58,14 @@
       <td>ScienceDirect / S. Wang et al., "Artificial intelligence in education: A systematic literature review" (2024)</td>
     </tr>
     <tr>
-      <th>Abstract (100–150 words)</th>
+      <th>Abstract</th>
       <td>
-        This systematic review compiles research on AI applications in education, emphasizing personalized learning, adaptive assessment, and intelligent tutoring. The authors analyze empirical studies to identify where AI has improved learning outcomes and where evidence is still thin. They highlight tools like AI tutors, adaptive curricula, and automated feedback systems, and discuss pedagogical and equity concerns—especially the digital divide and risks of overreliance on automated feedback. The paper’s strength lies in synthesizing a range of experimental and real-world deployments, pointing to both promising directions and gaps (e.g., long-term learning retention and socio-emotional impacts) that future research must address.
+        Compiled within this articles are applications of AI in our education system. It emphasizes personalized learning, adaptive assessment, and intelligent tutoring. Author Shan Wang analyzes studies meant to identify whether or not AI has improves learning outcomes in our. They highlight tools such as AI tutors, automated feedback systems, and on top of this discuss concerns of equity. Especially the digital divide and the risk of students in schools relying too much on automated feedback AI. Wang's strength in this paper lies in pointing to the proper research and issues in educational use of AI that future research must address.
       </td>
     </tr>
   </table>
 
-  <!-- Source 2 -->
+
   <h2>Source 2</h2>
   <table>
     <tr>
@@ -51,14 +77,13 @@
       <td>arXiv / Zhoumingju Jiang &amp; Mengjun Jiang, "Beyond Answers: LLM-Powered Tutoring System in Physics Education" (2024)</td>
     </tr>
     <tr>
-      <th>Abstract (100–150 words)</th>
+      <th>Abstract </th>
       <td>
-        This research introduces Physics-STAR, a tutoring framework that uses a large language model to provide adaptive, step-by-step guidance for physics learners. The authors report a controlled pilot showing improved comprehension and efficiency compared with generic LLM help and lecture instruction. The system focuses on fostering deep understanding through guided questioning, scaffolded prompts, and reflective tasks rather than merely supplying answers. The paper is notable because it presents an applied LLM system with measured learning gains and discusses design decisions that support conceptual understanding—making it directly relevant for educators exploring LLM-based instructional tools.
+        Within this article lies research that introduces Physics-STAR, an AI tutoring framework that provides step-by-step guidance for physics learners. Zhoumingju Jiang shows proof of a controlled pilot shwoing improvement in his comprehension and efficiency when compares with generic instruction through lecture. Physics-STAR concentrates on fostering deep understanding through guided questioning and reflective-based tasks rather than only providing answers. Jiang's research in this article is notable because it presents a system of AI that has improved the ability of numerous pilots. These instructional tools could very well change how we learn in all facets of life in the coming years.
       </td>
     </tr>
   </table>
 
-  <p class="note">All abstracts are original summaries authored for this webography.</p>
   <p><a href="project.html">&larr; Back to project</a></p>
 </body>
 </html>
