--- a/subtopic3.html
+++ b/subtopic3.html
@@ -5,14 +5,35 @@
   <title>AI and Employment — Webography</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: Arial, Helvetica, sans-serif; margin: 28px; color:#222; }
+    body { 
+      font-family: Arial, Helvetica, sans-serif; 
+      margin: 28px; 
+      color:#ffffff;                
+      background-color:#003c8f; 
+    }
+
     h1 { margin-bottom: 4px; }
     .back { margin-bottom: 16px; }
-    table { border-collapse: collapse; width:100%; margin-bottom: 18px; }
-    th, td { border: 1px solid #cfcfcf; padding: 8px; text-align:left; vertical-align:top; }
-    th { background:#f5f5f5; width:160px; }
+
+    table { 
+      border-collapse: collapse; 
+      width:100%; 
+      margin-bottom: 18px; 
+    }
+    th, td { 
+      border: 1px solid #ffffff;     
+      padding: 8px; 
+      text-align:left; 
+      vertical-align:top; 
+      color:#ffffff;
+    }
+    th { 
+      background:#002a63;           
+      width:160px; 
+    }
+
+    a { color:#ffffff; text-decoration: underline; }
     .site-url { word-break: break-all; }
-    .note { font-size:0.95em; color:#555; margin-top:12px; }
   </style>
 </head>
 <body>
@@ -20,7 +41,6 @@
   <h1>AI and Employment (Labor Market)</h1>
   <p>Two policy and research-oriented sources outlining AI's effects on jobs and the economy.</p>
 
-  <!-- Source 1 -->
   <h2>Source 1</h2>
   <table>
     <tr>
@@ -34,12 +54,11 @@
     <tr>
       <th>Abstract (100–150 words)</th>
       <td>
-        The OECD Employment Outlook (2023) evaluates how AI and automation affect jobs, skills, and inequality across member countries. It provides evidence that while certain occupations face significant automation risk, the aggregate labor market has shown resilience so far. The report emphasizes that AI's effects are uneven: some workers gain wage premiums through complementary skills while others face job narrowing or displacement. It recommends policy measures—such as reskilling programs, social safety nets, and measures to broaden access to AI technologies—to ensure inclusive benefits. As a policy-oriented, data-rich source, the OECD report is an essential reference for understanding national and international implications of AI on work.
+        The excerpt observes the manner in which AI and automation impact jobs and skills in the modern day. This OECD proves that while certain occupations are potentially at risk due to AI automation, the collective labor market has shown resilience thus far.  AI's effects appear to be uneven: some workers gain wage premiums through the skills they attain through AI usage while others face potential job loss. This excerpt from the OECD recommends a number of solutions, most of all it delves into measures to broaden access to AI technologies to ensure inclusive benefits. AI should benefit us, not take us out of a job. Undoubtedly, this OECD report is indispensible to truly understand the international implications of AI in the work place.
       </td>
     </tr>
   </table>
 
-  <!-- Source 2 -->
   <h2>Source 2</h2>
   <table>
     <tr>
@@ -53,12 +72,11 @@
     <tr>
       <th>Abstract (100–150 words)</th>
       <td>
-        This Brookings article synthesizes recent empirical research (including Yale Budget Lab findings) showing that generative AI has not, to date, produced broad job losses in the U.S. labor market. The piece argues that while AI is changing the mix of tasks within occupations—augmenting some tasks and automating others—the evidence points to gradual transformation rather than sudden displacement. The article highlights that societal impacts will depend on adoption patterns, complementary investments (training and management), and policy responses. It is useful for grounding public debate in current empirical evidence and cautioning against alarmist predictions absent long-term data.
+        Brookings Institution produces this article that explains recent research that shows how generative AI has not, to date, cost the US jobs in any significant manner. While AI is actively changing how many occupations operate, the evidence points to a gradual transformation of these occupations rather than them simply disappearing. The conclusion this article ultimately comes to is that how the job market is impacted by AI will depend on how it's integrated, who is investing in development, and government policy. Brookings provides a resource here that calms the winds cautioning against alarmist predictions regarding AI that lack long-term data.
       </td>
     </tr>
   </table>
 
-  <p class="note">Abstracts are original and were written for this assignment.</p>
   <p><a href="project.html">&larr; Back to project</a></p>
 </body>
 </html>
