--- a/project.html
+++ b/project.html
@@ -44,7 +44,7 @@
     <h2>Project Files</h2>
     <ul>
       <li><a href="paper.docx" download>paper.docx</a> — Full research paper</li>
-      <li><a href="presentation.ppt" download>presentation.ppt</a> — Project presentation</li>
+      <li><a href="presentation.ppt" download>presentation.pptx</a> — Project presentation</li>
     </ul>
   </section>
 
