--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
   </section>
 
   <footer>
-    <p>Course: CSIT 100 — Webography Project. Files and pages created by Ryan Zurich.</p>
+    <p>Course: CSIT 100 — Webography Project</p>
   </footer>
 </body>
 </html>
