--- a/subtopic1.html
+++ b/subtopic1.html
@@ -34,7 +34,6 @@
   </style>
 </head>
 <body>
-  <p class="back"><a href="project.html">&larr; Back to project page</a></p>
   <h1>AI in Healthcare</h1>
 
   <!-- Source 1 -->
@@ -75,6 +74,6 @@
     </tr>
   </table>
 
-  <p><a href="project.html">&larr; Back to project</a></p>
+  <p><a href="project.html">&larr; Home Page</a></p>
 </body>
 </html>
