--- a/subtopic2.html
+++ b/subtopic2.html
@@ -43,7 +43,6 @@
   </style>
 </head>
 <body>
-  <p class="back"><a href="project.html">&larr; Back to project page</a></p>
   <h1>AI in Education</h1>
 
 
@@ -84,6 +83,6 @@
     </tr>
   </table>
 
-  <p><a href="project.html">&larr; Back to project</a></p>
+  <p><a href="project.html">&larr; Home Page</a></p>
 </body>
 </html>
