--- a/subtopic3.html
+++ b/subtopic3.html
@@ -37,7 +37,6 @@
   </style>
 </head>
 <body>
-  <p class="back"><a href="project.html">&larr; Back to project page</a></p>
   <h1>AI and Employment (Labor Market)</h1>
   <p>Two policy and research-oriented sources outlining AI's effects on jobs and the economy.</p>
 
@@ -77,6 +76,6 @@
     </tr>
   </table>
 
-  <p><a href="project.html">&larr; Back to project</a></p>
+  <p><a href="project.html">&larr; Home Page</a></p>
 </body>
 </html>
